@@ -41,6 +41,7 @@ xine-lib (1.1.4)
     it should be possible to remove WavPack dependency entirely in the future.
   * Implement a True Audio files demuxer. [bug #1586381]
   * Allow decoding of MusePack SV 7.x files (7.1 files at least play fine).
+  * Fix demuxing of uncompressed VobSub subtitles in Matroska files
 
 xine-lib (1.1.3)
   * Security fixes:
